[WIP] Removed symfony_cmf prefix

--- a/src/Sandbox/MainBundle/Resources/views/Block/demo_action_block.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Block/demo_action_block.html.twig
@@ -1,4 +1,4 @@
- {% extends 'SymfonyCmfBlockBundle:Block:block_base.html.twig' %}
+ {% extends 'CmfBlockBundle:Block:block_base.html.twig' %}
 
 {% block block %}
     <div class="span3">
