add config for slideshowblock

--- a/src/Sandbox/MainBundle/Resources/views/Homepage/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Homepage/index.html.twig
@@ -9,11 +9,10 @@
 
     <hr/>
 
-    <div class="row">
-        {{ sonata_block_render({
-            'name': 'additionalInfoBlock'
-        }) }}
-    </div>
+    {{ sonata_block_render({ 'name': 'additionalInfoBlock' }, {
+        'divisibleBy': 3,
+        'divisibleClass': 'row'
+    }) }}
 
     <div class="row">
         <div class="span3">
