--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -114,7 +114,7 @@
         </div>
 
         {% block bottom_scripts %}
-            {% render controller("cmf_create.jsloader.controller:includeJSFilesAction") %}
+            {% render controller("cmf_create.jsloader.controller:includeJSFilesAction",{ _locale: app.request.locale }) %}
         {% endblock %}
     </body>
 </html>
