--- a/src/Sandbox/MainBundle/Resources/views/Block/demo_action_block.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Block/demo_action_block.html.twig
@@ -2,7 +2,7 @@
 
 {% block block %}
     <div class="span3">
-        <h2>Demo Action Block</h2>
-        <p>This block content is rendered by a custom Symfony2 action. Thus it has no inline-editing.</p>
+        <h2>{% trans %}cmf.action_block.title{% endtrans %}</h2>
+        <p>{% trans %}cmf.action_block.body{% endtrans %}</p>
     </div>
 {% endblock %}
