--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -103,7 +103,7 @@
 
             <div id="footer" class="row">
                 <div id="menu-service">
-                    {{ knp_menu_render('service') }}
+                    {{ knp_menu_render('simple') }}
                 </div>
                 <div class="span12">
                 {% block footer %}
