updated BlockBundle BC break

--- a/src/Sandbox/MainBundle/Resources/views/Homepage/index.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/Homepage/index.html.twig
@@ -10,9 +10,9 @@
     <hr/>
 
     {{ sonata_block_render({ 'name': 'additionalInfoBlock' }, {
-        'divisibleBy': 3,
-        'divisibleClass': 'row',
-        'childClass': 'span3'
+        'divisible_by': 3,
+        'divisible_class': 'row',
+        'child_class': 'span3'
     }) }}
 
     <div class="row">
