fix fixture reload url

--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -12,7 +12,8 @@
     As a result its possible to break the entire routing configuration. In
     many cases when you see an error on this site, its caused by someone
     having done exactly that. You can reload the entire content to the
-    original state by calling <a href="./reload-fixtures.php">reload-fixtures.php</a>
+    original state by calling
+    <a href="{{ app.request.getSchemeAndHttpHost }}/reload-fixtures.php">reload-fixtures.php</a>
 </p>
 </body>
 </html>
