since symfony 2.3 the locale is automatically propagated

--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -117,7 +117,7 @@
         </div>
 
         {% block bottom_scripts %}
-            {% render(controller("cmf_create.jsloader.controller:includeJSFilesAction", { "editor": "ckeditor", "_locale": app.request.locale })) %}
+            {% render(controller("cmf_create.jsloader.controller:includeJSFilesAction")) %}
         {% endblock %}
     </body>
 </html>
