--- a/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
+++ b/src/Sandbox/MainBundle/Resources/views/skeleton.html.twig
@@ -61,7 +61,7 @@
                 </div>
                 {% set currentItem = knp_menu_get('main').currentItem %}
                 {% if currentItem %}
-                <div id="breadcrumb" class="span12">
+                <div id="breadcrumb" class="span10">
                     <ul class="breadcrumb boxed">
                         {% for title, url in currentItem.breadcrumbsArray %}
                             <li><a href="{{url}}">{{ title }}</a></li>
@@ -69,6 +69,14 @@
                     </ul>
                 </div>
                 {% endif %}
+                {% block raw_data %}
+                <div id="raw_format" class="span2">
+                    <p class="raw_format boxed">Raw:
+                        <a id="raw_xml" title="{{ "cmf.raw_data_hint"|trans() }}">XML</a>,
+                        <a id="raw_json" title="{{ "cmf.raw_data_hint"|trans() }}">json</a>
+                    </p>
+                </div>
+                {% endblock raw_data %}
 
             </div>
 
@@ -116,8 +124,19 @@
             </div>
         </div>
 
+        <div id="raw_data_overlay" class="boxed">
+            <div id="overlay_description">{{ "cmf.raw_data"|trans()|raw }}</div>
+            <div id="overlay_content"></div>
+        </div>
+
         {% block bottom_scripts %}
             {% render(controller("cmf_create.jsloader.controller:includeJSFilesAction")) %}
+
+            {% javascripts
+                '@SandboxMainBundle/Resources/public/js/rawdata.js'
+            %}
+                <script src="{{ asset_url }}"></script>
+            {% endjavascripts %}
         {% endblock %}
     </body>
 </html>
