--- a/src/Sandbox/TestBundle/Resources/views/Test/index.html.twig
+++ b/src/Sandbox/TestBundle/Resources/views/Test/index.html.twig
@@ -1,5 +1,7 @@
 {% extends "SandboxMainBundle::skeleton.html.twig" %}
 
+{% block raw_data %}{# can't get raw data for this #}{% endblock %}
+
 {% block content %}
 <div class="hero-unit">
     <h1>Hello World!</h1>
