Moved templates to app/ dir

--- a/app/Resources/views/Demo/template_explicit.html.twig
+++ b/app/Resources/views/Demo/template_explicit.html.twig
@@ -1,5 +1,5 @@
 {# special template without the sidebar #}
-{% extends "SandboxMainBundle::skeleton.html.twig" %}
+{% extends "base.html.twig" %}
 
 {% block content %}
 <p><em>This is a template explicitly specified by a route</em></p>
