--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -44,7 +44,7 @@
                     <div id="language_selector" class="pull-right">
                         {% block language_selector %}
                             {% if cmfMainContent is defined %}
-                                {{ locale_switcher(cmfMainContent, null, 'SandboxMainBundle:Homepage:switcher_links.html.twig') }}
+                                {{ locale_switcher(cmfMainContent, null, 'homepage/switcher_links.html.twig') }}
                             {% endif %}
                         {% endblock %}
                     </div>
