--- a/src/Sandbox/TestBundle/Resources/views/Test/index.html.twig
+++ b/src/Sandbox/TestBundle/Resources/views/Test/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "SandboxMainBundle::skeleton.html.twig" %}
+{% extends "base.html.twig" %}
 
 {% block raw_data %}{# can't get raw data for this #}{% endblock %}
 
