--- a/app/Resources/views/Homepage/index.html.twig
+++ b/app/Resources/views/Homepage/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "SandboxMainBundle::skeleton.html.twig" %}
+{% extends "base.html.twig" %}
 
 {% block content %}
     <p><em>We are on the homepage which uses a special template</em></p>
