added platform.sh config

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -118,7 +118,10 @@
                 </div>
                 <div class="span12">
                 {% block footer %}
-                    <p>Powered by <a href="http://cmf.symfony.com/">Symfony CMF</a> | Frontend editing funded in part by <a href="http://www.iks-project.eu/">IKS</a></p>
+                    <p>Powered by <a href="http://cmf.symfony.com/">Symfony CMF</a>
+                        | Frontend editing funded in part by <a href="http://www.iks-project.eu/">IKS</a>
+                        | Hosting graciously sponsored by <a href="http://platform.sh/">platform.sh</a>
+                    </p>
                     {% endblock %}
                 </div>
             </div>
