--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -59,12 +59,13 @@
                         <p id="slogan">Symfony2 Content Management Framework</p>
                     </div>
                 </div>
-                {% set currentItem = knp_menu_get('main').currentItem %}
+
+                {% set currentItem = app_get_current_menu_item('main') %}
                 {% if currentItem %}
                 <div id="breadcrumb" class="span10">
                     <ul class="breadcrumb boxed">
-                        {% for title, url in currentItem.breadcrumbsArray %}
-                            <li><a href="{{url}}">{{ title }}</a></li>
+                        {% for item in knp_menu_get_breadcrumbs_array(currentItem) %}
+                            <li><a href="{{ item.uri }}">{{ item.label }}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
