--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,7 +1,12 @@
-body{
-    padding-top:50px;
-}
+body { padding-top:50px; }
 
+
+
+
+
+/*******************************\
+    $NAVBAR
+\*******************************/
 .navbar-breadcrumb{
     background:none;
     padding:0;
@@ -13,55 +18,65 @@ body{
     margin-top:-10px;
 }
 
-.navbar-btn{
-    background:#f0f0f0;
-}
+.navbar-btn { background:#f0f0f0; }
 
 .navbar-dropdown{
     float:left;
     margin-left:10px;
 }
-.navbar-dropdown .dropdown-menu{
-    margin-top:-5px;
-}
+    .navbar-dropdown .dropdown-menu { margin-top:-5px; }
 
+
+
+
+
+/*******************************\
+    $BANNER
+\*******************************/
 .banner{
     background:#a3ca5f;
-    position:relative;
     overflow:hidden;
+    position:relative;
 }
-.banner h1 small{
-    display:block;
-    margin-bottom:20px;
-    font-size:30%;
-}
-.banner:before{
-    content:'';
-    display:block;
-    height:570px;
-    width:2000px;
-    position:absolute;
-    background:rgba(0,0,0,.05);
-    transform:rotate(-30deg);
-    top:-100px;
-    right:-830px;
-}
-.banner:after{
-    content:'';
-    display:block;
-    height:500px;
-    width:790px;
-    position:absolute;
-    background:rgba(255,255,255,.1);
-    transform:rotate(80deg);
-    top:0px;
-    right:-199px;
-}
+    .banner:before{
+        content:'';
+        display:block;
+        height:570px;
+        width:2000px;
+        background:rgba(0,0,0,.05);
+        transform:rotate(-30deg);
+        position:absolute;
+        top:-100px;
+        right:-830px;
+    }
+    .banner:after{
+        content:'';
+        display:block;
+        height:500px;
+        width:790px;
+        background:rgba(255,255,255,.1);
+        transform:rotate(80deg);
+        position:absolute;
+        top:0px;
+        right:-199px;
+    }
+    .banner h1 small{
+        display:block;
+        margin-bottom:20px;
+        font-size:30%;
+    }
 
+
+
+
+
+/*******************************\
+    $NAV_PANEL
+\*******************************/
 .panel-nav .list-group-item:before{
     content:'/';
-    color:#bbb;
     margin-right:5px;
+    color:#bbb;
 }
 .panel-nav .list-group .list-group{
     margin-top:5px;
@@ -72,57 +87,52 @@ body{
 }
 
 
+
+
+
+/*******************************\
+    $LIST_GROUP
+\*******************************/
 .list-group .list-group{
     margin-top:10px;
     margin-bottom:-7px;
 }
-.list-group .list-group .list-group-item{
-    border:none;
-}
+.list-group .list-group .list-group-item { border:none; }
 
+
+
+
+
+/*******************************\
+    $FOOTER
+\*******************************/
 .footer{
     background:#333;
-    color:#959595;
     padding:15px 0 10px;
     border-bottom:5px solid #a3ca5f;
+    color:#959595;
 }
-.footer a, .footer a:visited{
-    color:#fff;
-}
-.footer-nav{
-    padding-left:0;
-}
+.footer a, .footer a:visited   { color:#ffffff;  }
+.footer-nav                    { padding-left:0; }
+
 .footer-nav li{
     float:left;
     margin-right:5px;
     list-style:none;
 }
-.footer-nav li:before{
-    content:'/';
-    margin:0 2px;
-}
-.footer-nav li:first-child:before{
-    display:none;
-}
+    .footer-nav li:before{
+        content:'/';
+        margin:0 2px;
+    }
+    .footer-nav li:first-child:before { display:none; }
 
-.main a, .main a:visited {
-    background:inherit;
-    color:#79a325;
-    text-decoration:none;
-}
 
-.footer a:hover, .main a:hover {
-    color:#79a325;
-}
 
-code{
-    color:#516b24;
-    background-color:#e4f0d1;
-}
-.alert code{
-    background-color:inherit;
-}
 
+
+/*******************************\
+    $DOC_REFERENCE
+\*******************************/
 .docref{
     float:left;
     display:block;
@@ -133,226 +143,59 @@ code{
 .docref .glyphicon{
     margin-right:10px;
     padding:3px;
-    border-radius:100px;
     background:#333;
+    border-radius:100px;
     font-size:80%;
     color:#fff;
     top:0;
 }
-.docref:hover{
-    text-decoration:underline;
-}
-.alert-info .docref{
-    color:#245269 !important;
-}
-.alert-info .docref .glyphicon{
-    background:#245269;
-}
+.docref:hover           { text-decoration:underline; }
+.alert-info .docref      { color:#245269 !important; }
+.alert-info .docref .glyphicon { background:#245269; }
 
+
+
+
+
+/*******************************\
+    $OVERLAY
+\*******************************/
 #raw_data_overlay {
-    background-color: #ddd;
-    border: 1px black solid;
-    position: absolute;
-    top: 100px;
-    left: 100px;
-    width: 80%;
-    display: none;
-    padding: 16px;
+    width:80%;
+    display:none;
+    padding:16px;
+    background-color:#ddd;
+    border:1px black solid;
+    position:absolute;
+    top:100px;
+    left:100px;
 }
 
 #overlay_description {
-    margin-bottom: 16px;
-    padding: 8px;
-    background-color: #eee;
+    margin-bottom:16px;
+    padding:8px;
+    background-color:#eee;
 }
 
 #overlay_content {
-    font-family: courier, monospace;
-    padding: 8px;
-    white-space: pre-wrap;
-}
-
-/*#skiplinks {
-    margin-left: .5em;
-}
-
-#top li {
-    display: inline;
-}
-
-#top .selected a {
-    color: #333;
-}
-
-#logo-text a {
-    color: #fff;
-    text-decoration: none;
-}
-
-#language_selector {
-    margin-right: 1em;
-    text-align: right;
-}
-
-#top a {
-    padding: .5em;
-}
-
-#language_selector li span {
-    display: none;
-}
-
-#breadcrumb .breadcrumb, #raw_format .raw_format {
-    border: none;
-    background-color: #4b4b4b;
-    background-image: none;
-    box-shadow: none;
-    margin-bottom: .5em;
-    padding-left: 2em;
-    filter: none;
-}
-
-#breadcrumb .breadcrumb li {
-    text-shadow: none;
-}
-
-#breadcrumb .breadcrumb li a {
-    color: #a3ca5f;
-}
-
-#breadcrumb .breadcrumb li:after {
-    content: " /";
-    color: #ccc;
-}
-
-#breadcrumb .breadcrumb li:last-child:after {
-    content: none;
-}
-
-#raw_format p {
-    text-align: right;
-    padding: 7px;
-    color: white;
-}
-
-#raw_format a {
-    cursor: pointer;
+    padding:8px;
+    font-family:courier, monospace;
+    white-space:pre-wrap;
 }
 
 
-#navigation ul {
-    padding: .5em 0;
+
+
+
+/*******************************\
+    $INLINE
+\*******************************/
+.main a, .main a:visited {
+    background:inherit;
+    color:#79a325;
+    text-decoration:none;
 }
 
-#navigation ul.menu_main {
-    margin: 0;
-}
-
-#navigation li {
-    list-style-type: none;
-    padding: .5em 0;
-}
-
-#navigation li:before {
-    content: "/ ";
-    color: #ccc;
-}
-
-#navigation li a {
-    padding: .5em 0;
-}
-
-#navigation .current_ancestor > a,
-#menu-service .current_ancestor > a  {
-    font-weight: bold;
-}
-
-#navigation .current > a,
-#menu-service .current > a {
-    color: #4b4b4b;
-}
-
-#content-container {
-    background-color: #fff;
-    padding: 2em 0;
-}
-
-#content, #content_extra {
-    position: relative;
-}
-
-#content-container h1 {
-    line-height: 1.5em;
-}
-
-#content-container h2 {
-    line-height: 1.3em;
-}
-
-.articleContainer {
-    position: relative;
-}
-
-.articleContainer ul.tags {
-    margin: 0;
-}
-
-.articleContainer ul.tags li {
-    margin-right: .5em;
-    display: inline;
-    background-color: #4B4B4B;
-    font-size: 1em;
-    padding: 2px 4px 4px 4px;
-    font-weight: normal;
-}
-
-.articleContainer > * {
-}
-
-#footer {
-    margin-top: 1em;
-}
-
-#footer p {
-    margin-right: 2em;
-    text-align: right;
-}
-
-#menu-service li {
-    display: inline;
-}
-
-#menu-service li:after {
-    content: " |";
-    color: #ccc;
-}
-
-#menu-service li:last-child:after {
-    content: none;
-}
-
-
-@media (max-width: 767px) {
-
-    #banner .hero-unit h1 {
-        font-size: 48px;
-    }
-
-    #banner img {
-        height: 60%;
-    }
-
-    #content-container {
-        padding: 0;
-    }
-
-    #content {
-        margin-top: 3em;
-    }
-
-    #navigation .well {
-        padding-top: 0;
-        padding-bottom: 0;
-        margin-bottom: 0;
-    }
-}*/
+.footer a:hover, .main a:hover { color:#79a325;  }
+code  { background-color:#e4f0d1; color:#516b24; }
+.alert code          { background-color:inherit; }
