Use local vendor assets

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,7 +10,7 @@
         {{ sonata_seo_title() }}
 
         {% block includes %}
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset("assets/vendor/bootstrap.min.css") }}">
             <link rel="stylesheet" href="{{ asset("assets/css/style.css") }}">
 
             {% if is_granted("IS_AUTHENTICATED_ANONYMOUSLY") %}
@@ -119,17 +119,17 @@
         </div>
 
         <div id="raw_data_overlay" class="boxed">
-            <div id="overlay_description">{{ "cmf.raw_data"|trans()|raw }}</div>
+            <div id="overlay_description">{{ "cmf.raw_data"|trans|raw }}</div>
             <div id="overlay_content"></div>
         </div>
 
         {% block bottom_scripts %}
-            <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+            <script type="text/javascript" src="{{ asset("assets/vendor/jquery.min.js") }}"></script>
 
             {% render(controller("cmf_create.jsloader.controller:includeJSFilesAction")) %}
 
             <script src="{{ asset("assets/js/rawdata.js") }}"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha256-KXn5puMvxCw+dAYznun+drMdG1IFl3agK0p/pqT9KAo= sha512-2e8qq0ETcfWRI4HJBzQiA3UoyFk6tbNyG+qSaIBZLyW9Xf3sWZHN/lxe9fTh1U45DpPf07yj94KsUHHWe4Yk1A==" crossorigin="anonymous"></script>
+            <script src="{{ asset("assets/vendor/bootstrap.min.js") }}"></script>
         {% endblock %}
     </body>
 </html>
