--- a/app/Resources/views/admin/custom_layout.html.twig
+++ b/app/Resources/views/admin/custom_layout.html.twig
@@ -3,5 +3,6 @@
 {% block stylesheets %}
     {{ parent() }}
 
-    <link rel="stylesheet" href="{{ asset("assets/css/sonata_admin.css") }}"/>
+    <link rel="stylesheet" href="{{ asset("assets/css/sonata_admin.css") }}">
+    <link rel="stylesheet" href="{{ asset("bundles/sonatatranslation/css/sonata-translation.css") }}">
 {% endblock %}
