--- a/app/Resources/CmfSimpleCmsBundle/views/Page/index.html.twig
+++ b/app/Resources/CmfSimpleCmsBundle/views/Page/index.html.twig
@@ -7,7 +7,6 @@
         <a class="docref" href="http://symfony.com/doc/current/cmf/bundles/simple_cms/introduction.html"><i class="glyphicon glyphicon-chevron-right"></i>Read about this feature in the CMF documentation.</a>
     </div>
 
-    {% createphp cmfMainContent as="rdf" %}
-        {{ rdf|raw }}
-    {% endcreatephp %}
+    <h1>{{ cmfMainContent.title }}</h1>
+    {{ cmfMainContent.body|raw }}
 {% endblock %}
