--- a/app/Resources/views/static_content/index.html.twig
+++ b/app/Resources/views/static_content/index.html.twig
@@ -7,9 +7,8 @@
         <a class="docref" href="http://symfony.com/doc/current/cmf/bundles/content/introduction.html"><i class="glyphicon glyphicon-chevron-right"></i>Read about this feature in the CMF documentation.</a>
     </div>
 
-    {% createphp cmfMainContent as="rdf" %}
-        {{ rdf|raw }}
-    {% endcreatephp %}
+    <h1>{{ cmfMainContent.title }}</h1>
+    {{ cmfMainContent.body|raw }}
 
     {{ sonata_block_render({ 'name': 'additionalInfoBlock' }) }}
 {% endblock %}
