--- a/app/Resources/views/admin/user_block.html.twig
+++ b/app/Resources/views/admin/user_block.html.twig
@@ -1,7 +1,12 @@
 {% extends 'SonataAdminBundle:Core:user_block.html.twig' %}
 
 {% block user_block %}
-    {{ locale_switcher(null, null, 'admin/switcher_links.html.twig') }}
-    - Welcome {{ app.user.username }} {# <a href="{{ path('fos_user_security_logout') }}">Logout</a> #}
-    {{ parent() }}
+    <div class="admin-user-info">
+        Hi {{ app.user.username }}!
+        <a href="{{ path('logout') }}">Logout</a>
+    </div>
+
+    <div class="admin-user-locale">
+        {{ locale_switcher(null, null, 'admin/switcher_links.html.twig') }}
+    </div>
 {% endblock %}
