--- a/web/assets/css/sonata_admin.css
+++ b/web/assets/css/sonata_admin.css
@@ -6,3 +6,17 @@
     font-family: FontAwesome;
     content: "\f08e";
 }
+
+.dropdown-user{
+    box-shadow:1px 1px 4px #eee;
+}
+
+.admin-user-info{
+    padding:5px;
+}
+.admin-user-locale{
+    border-top:1px solid #eaeaea;
+    margin:5px;
+    margin-top:0;
+    padding-top:5px;
+}
