implement sitemap and error handling of seo-bundle

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -26,6 +26,21 @@ body { padding-top:50px; }
 }
     .navbar-dropdown .dropdown-menu { margin-top:-5px; }
 
+.cmf-sitemap .indent-1 {
+    margin-left: 20px;
+}
+
+.cmf-sitemap .indent-2 {
+    margin-left: 40px;
+}
+
+.cmf-sitemap .indent-3 {
+    margin-left: 60px;
+}
+
+.cmf-sitemap .indent-4 {
+    margin-left: 80px;
+}
 
 
 
