add error description page

--- a/app/Resources/views/sitemap/index.html.twig
+++ b/app/Resources/views/sitemap/index.html.twig
@@ -2,6 +2,13 @@
 
 {% block content %}
     <h1>Sitemap</h1>
+    <p>
+        The sitemap feature allows to display different lists of you content by their routes. Again the content document
+        classes decides whether to display on a sitemap or not. The sitemap of the symfony-cmf sandbox is relatively flat
+        cause the routes of the content is flat. But the you can indent your items by depth information of your route.<br />
+        Same information, that you can see well arranged for a human user, can be requested by a search engine in
+        an <a href="{{ url('cmf_seo_sitemap', {_format: 'xml', sitemap: 'sitemap'}) }}">xml format</a>.
+    </p>
     <ul class="cmf-sitemap">
         {% for url in urls %}
             <li{% if url.depth is not null %} class="indent-{{ url.depth }}"{% endif %}>
