--- a/app/Resources/views/error/index.html.twig
+++ b/app/Resources/views/error/index.html.twig
@@ -9,7 +9,7 @@
     </p>
 
     <p>If you are seeing this page as the result of an edit in the admin tool, please report what you were doing
-        to our <a href=\"https://github.com/symfonycmf/cmfsandbox/issues/new\">ticket system</a>,
+        to our <a href="https://github.com/symfony-cmf/cmf-sandbox/issues/new">ticket system</a>,
         so that we can add means to prevent this issue in the future. But to get things working again
         for now, please just <a href="{{ app.request.getSchemeAndHttpHost() }}/reloadfixtures.php">click here</a>
         to reload the data fixtures.
